# lidar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REPORT.md  gn_icp_kitti_0_global_map.pcd  gn_icp_kitti_0_trajectory.tum  gn_icp_kitti_0_trajectory.txt  icp_kitti_0_global_map.pcd  icp_kitti_0_trajectory.txt  ndt_kitti_0_trajectory.tum  ndt_kitti_0_trajectory.txt  ndt_trajectory_kitti_0.txt  package.xml  project_files_organization.txt
.evalenv/: pyvenv.cfg
bag_processing_results/: analyze_trajectory.py  estimated_trajectory.txt  plot_trajectory.py  processing_report.txt  trajectory_plot.txt
config/: lidar_odometry.rviz
evo_evaluation/: ndt_gnicp_stats.txt  relative_simple_metrics.txt
evo_evaluation_results/ndt/: ndt_trajectory_0_stats.txt
include/lidar_odometry/: gn_icp_registration.h  icp_registration.h  imu_integration.h  lidar_odometry.h  ndt_registration.h  ros_odometry_node.h  trajectory_evaluator.h
launch/: lidar_odometry.launch
scripts/: direct_bag_processor.py  evaluate_relative.py  evaluate_simple.py  evaluate_with_evo.sh  show_results.py  simple_trajectory_evaluator.py  view_pointcloud.py
src/: gn_icp_registration.cpp  icp_odometry.cpp  icp_registration.cpp  imu_integration.cpp  kitti_enhanced_odometry.cpp  kitti_simple.cpp  lidar_odometry.cpp  lidar_odometry_enhanced.cpp  ndt_odometry.cpp  ndt_registration.cpp  ros_odometry_node.cpp  trajectory_evaluator.cpp
