<?xml version="1.0"?>
<package format="3">
  <name>lidar_odometry</name>
  <version>0.1.0</version>
  <description>LiDAR odometry project (NDT and GN-ICP) built for ROS2 ament_cmake; standalone build supported.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


